--- a/web/static/pages/template/html/base.html
+++ b/web/static/pages/template/html/base.html
@@ -3,12 +3,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Реальное время / Journalist Service</title>
-  <link rel="icon" href="pages/img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="styles/basic.css">
+  <title>Реальное время / {{ template "title" . }}</title>
+  <link rel="icon" href="/web/static/img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/web/static/styles/basic/basic.css">
   {{template "htmlStyle"}}
-  <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="styles/animation.css">
+  <link rel="stylesheet" href="/web/static/styles/basic/style.css">
+  <link rel="stylesheet" href="/web/static/styles/basic/animation.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -21,6 +21,10 @@
       <form action="/image"><button class="header-button" id="imagePage">IMAGE</button></form>
       <form action="/rewrite"><button class="header-button" id="rewritePage">REWRITE</button></form>
       <form action="/text"><button class="header-button" id="textPage">TEXT</button></form>
+    </div>
+    <div class="header-group">
+      <img src="/web/static/img/logo.png" class="logo-image"/>
+      <h1>Реальное время / {{ template "title" . }}</h1>
     </div>
     {{template "content"}}
 </div>
