--- a/web/static/pages/template/html/base.html
+++ b/web/static/pages/template/html/base.html
@@ -19,6 +19,7 @@
       <form action="/"><button class="header-button" id="filePage">FILE</button></form>
       <form action="/uri"><button class="header-button" id="urlPage" disabled>URL</button></form>
       <form action="/image"><button class="header-button" id="imagePage">IMAGE</button></form>
+      <form action="/upscale"><button class="header-button" id="upscalePage">UPSCALE</button></form>
       <form action="/rewrite"><button class="header-button" id="rewritePage">REWRITE</button></form>
       <form action="/text"><button class="header-button" id="textPage">TEXT</button></form>
     </div>
