--- a/web/static/pages/template/html/base.html
+++ b/web/static/pages/template/html/base.html
@@ -26,6 +26,7 @@
     <div class="header-group">
       <img src="/web/static/img/logo.png" class="logo-image"/>
       <h1>Реальное время / {{ template "title" . }}</h1>
+      <p class="version-label" style="margin-left: 10px; color: gray;">(v 3.3.0)</p>
     </div>
     {{template "content"}}
 </div>
