--- a/web/static/styles/pages/image-upscaler/style.css
+++ b/web/static/styles/pages/image-upscaler/style.css
@@ -19,7 +19,7 @@
     display: grid;
     padding: 10px;
     grid-template: 
-        "input-group input-group input-group input-group input-group input-group input-group input-group control-group" 4.5%
+        "input-group input-group input-group input-group input-group input-group input-group input-group control-group" 4%
         "output-group output-group output-group output-group output-group output-group output-group output-group output-group";
     gap: 0.3%;
   }
@@ -34,12 +34,25 @@
   .control-group{
     grid-area: control-group;
     display: flex;
-    border: solid black;
   }
 
   .output-group{
     grid-area: output-group;
     display: flex;
     border: solid black;
+  }
+
+  /*-------*/
+
+  .control-group .button {
+    border-radius: 2px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .input-group .input-field{
+    align-self: center;
+    border-radius: 1px;
+    width: 100%;
   }
   
