--- a/web/static/styles/pages/text-rewriting/style.css
+++ b/web/static/styles/pages/text-rewriting/style.css
@@ -1,29 +1,13 @@
-
-  /* Добавляем оформление grid-контейнеру: */
-.container {
-    width: 90%;
-    height: 98vh;
-    margin-left: 5%;
-    margin-right: 5%;
-    border-radius: 5px; /* Скругляем углы на 5 пикселей */
-  }
-  
-  /*Параметры grid-контейнера*/
-  .container {
-    display: grid;
-    grid-template-rows: 0.5fr 0.5fr 7fr;
-    row-gap: 1%;
-  }
-  
 .work-group{
-    width: 100%;
+  height: 100%;
     display: grid;
     background-color: transparent;
     grid-template-columns: 5fr 0.1fr 5fr;
-    gap: 1%;
+    column-gap: 1%;
 }
 
 .input-text-group{
+  height: 100%;
     background-color: #edeeee;
     display: flex;
 }
