--- a/web/static/pages/template/html/base.html
+++ b/web/static/pages/template/html/base.html
@@ -16,12 +16,12 @@
 <body>
   <div class="container">
     <div class="header-buttons">
-      <form action="/"><button class="header-button" id="filePage">Расшифровка файла</button></form>
-      <form action="/uri"><button class="header-button" id="urlPage" disabled>Расшифровка по URL</button></form>
-      <form action="/image"><button class="header-button" id="imagePage">Генерация изображения</button></form>
-      <form action="/upscale"><button class="header-button" id="upscalePage">Увеличение изображения</button></form>
-      <form action="/rewrite"><button class="header-button" id="rewritePage">Рерайт текста</button></form>
-      <form action="/text"><button class="header-button" id="textPage">Обработка текста</button></form>
+      <form action="/"><button class="header-button upper-bold" id="filePage">Расшифровка файла</button></form>
+      <form action="/uri"><button class="header-button upper-bold" id="urlPage" disabled>Расшифровка по URL</button></form>
+      <form action="/image"><button class="header-button upper-bold" id="imagePage">Генерация изображения</button></form>
+      <form action="/upscale"><button class="header-button upper-bold" id="upscalePage">Увеличение изображения</button></form>
+      <form action="/rewrite"><button class="header-button upper-bold" id="rewritePage">Рерайт текста</button></form>
+      <form action="/text"><button class="header-button upper-bold" id="textPage">Обработка текста</button></form>
     </div>
     <div class="header-group">
       <img src="/web/static/img/logo.png" class="logo-image"/>
