--- a/web/static/styles/basic/basic.css
+++ b/web/static/styles/basic/basic.css
@@ -2,7 +2,7 @@
   /* Добавляем оформление элементам grid-контейнера: */
   .container * {
     border-radius: 5px; /* Скругляем углы на 5 пикселей */
-    background-color: #edeeee;
+    background-color: #f8f9f9;
     text-align: center; /* Контент размещаем в центре по горизонтали */
   }
 
@@ -10,6 +10,8 @@
   .container {
     height: 99vh;
     width: 90vw;
+    max-width: 90vw;
+    min-width: 90vw;
     margin: 0 auto;
     border-radius: 3px;  /*Скругляем углы на 5 пикселей */
   }
@@ -37,8 +39,8 @@
 
 .work-group{
   grid-area: c;
-  min-width: 70vw;
-  /*max-height: 78vh;*/
+  min-width: 75vw;
+  max-width: 75vw;
 }
 
 .bottom-group{
@@ -47,8 +49,8 @@
 
 
   .header-group{
-    min-height: 60px;
-    max-height: 60px;
+    min-height: 73px;
+    max-height: 73px;
   }
   
   /*Параметры конйтейнеров внутри grid-блока*/
@@ -58,16 +60,10 @@
     max-width: 200px;
     justify-items: start;
     align-items: center;
-  
   }
 
   .header-buttons button{
     font-size: 12px;
-    border: solid 1px black;
-  }
-
-  .header-buttons button:hover{
-    border: solid 1px black;
   }
   
   .header-group{
@@ -92,9 +88,10 @@
   .header-buttons *{
     height: 100%;
     width: 100%;
-    min-height: 40px;
-    max-height: 40px;
-    border-radius: 0%;
+    min-height: 33px;
+    max-height: 33px;
+    border-radius: 5px;
+    margin-bottom: 3px;
   }
   
   .header-group img{
