--- a/web/static/styles/pages/image-upscaler/style.css
+++ b/web/static/styles/pages/image-upscaler/style.css
@@ -4,9 +4,9 @@
 }
 
   .work-group {
-    height: 100%;
     display: grid;
     padding: 10px;
+    box-sizing: border-box;
     grid-template: 
         "input-group control-group" 4%
         "output-group output-group";
@@ -16,12 +16,12 @@
   .input-group{
     grid-area: input-group;
     display: flex;
+    margin-right: 30px;
     align-items: center;
     border: solid black;
   }
 
   .control-group{
-    max-width: 200px;
     grid-area: control-group;
     display: flex;
   }
@@ -29,11 +29,9 @@
   .output-group{
     grid-area: output-group;
     display: flex;
+    margin-top: 10px;
     border: solid black;
     width: 100%;
-    min-height: 75vh;
-    max-height: 75vh;
-    height: 75vh;
   }
 
   /*-------*/
