--- a/web/static/styles/pages/image-upscaler/style.css
+++ b/web/static/styles/pages/image-upscaler/style.css
@@ -31,13 +31,17 @@
     display: flex;
     margin-top: 10px;
     border: solid black;
+    background-color: #c1c1c1;
     width: 100%;
+  }
+
+  .output-group img{
+    border-radius: 0;
   }
 
   /*-------*/
 
   .control-group .button {
-    border-radius: 2px;
     width: 100%;
     height: 100%;
   }
