--- a/web/static/styles/pages/image-generation/style.css
+++ b/web/static/styles/pages/image-generation/style.css
@@ -49,14 +49,15 @@
 }
 
 .ration-area select{
-        background: hwb(0 100% 0%) url('https://img.icons8.com/ios-filled/15/down--v1.png') no-repeat right 10px center;
-        border: 1px solid #ccc;
+        background: hwb(0 100% 0% / 0.276) url('https://img.icons8.com/ios-filled/15/down--v1.png') no-repeat right 10px center;
+        border: 1px solid #ffffff;
         padding: 5px 30px 5px 10px; /* Резервируем место под стрелку */
         border-radius: 6px;
         font-size: 0.9rem;
         -webkit-appearance: none; /* Стиль для Safari */
         -moz-appearance: none;    /* Стиль для Firefox */
         appearance: none;         /* Стиль для прочих браузеров */
+        margin-left: 10px;
 }
 
 
@@ -73,8 +74,8 @@
 }
 
 .seed-area input{
-    margin-right: 2px;
-    margin-left: -2px;
+    margin-right: 15px;
+    margin-left: -10px;
     width: 40%;
     height: calc(1.25rem + 2px);
     padding: 0.375rem 0.9rem;
@@ -83,9 +84,9 @@
     font-weight: 200;
     line-height: 1;
     color: #212529;
-    background-color: #fff;
+    /*background-color: #fff;*/
     background-clip: padding-box;
-    border: 1px solid #bdbdbd;
+    border: 1px solid #ffffff;
     border-radius: 0.25rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -119,7 +120,7 @@
     max-height: 65vh;
     width: auto;
     height: auto;
-    box-shadow: 10px 5px 5px #fe7277;
+    box-shadow: 10px 5px 5px #fe72775b;
     margin: 10px;
 }
 
