--- a/web/static/styles/pages/image-upscaler/style.css
+++ b/web/static/styles/pages/image-upscaler/style.css
@@ -19,6 +19,7 @@
     margin-right: 30px;
     align-items: center;
     border: solid black;
+    background: transparent;
   }
 
   .control-group{
@@ -31,7 +32,7 @@
     display: flex;
     margin-top: 10px;
     border: solid black;
-    background-color: #c1c1c1;
+    background: rgba(255, 255, 255, 0.26);
     width: 100%;
   }
 
