--- a/web/static/styles/pages/image-generation/style.css
+++ b/web/static/styles/pages/image-generation/style.css
@@ -104,6 +104,8 @@
     font-size: 19px;
     margin: 5px;
     width: 100%;
+    padding: 10px;
+  box-sizing: border-box;
 }
 
 .output-image-class{
