--- a/web/static/styles/pages/recognition-from-file/style.css
+++ b/web/static/styles/pages/recognition-from-file/style.css
@@ -69,8 +69,9 @@
   line-height: 1.5em;
   flex: 1;
   font-size: 20px;
-  border: solid black;
   height: 95%;
   margin-left: 1%;
   margin-right: 1%;
+  padding: 10px;
+  box-sizing: border-box;
 }
