--- a/web/static/styles/pages/text-processing/style.css
+++ b/web/static/styles/pages/text-processing/style.css
@@ -77,6 +77,8 @@
     margin: 0.5%;
     text-align: left;
     line-height: 1.5em;
+    padding: 10px;
+  box-sizing: border-box;
   }
 
   .output-text-group textarea{
@@ -85,6 +87,8 @@
     margin: 0.5%;
     text-align: left;
     line-height: 1.5em;
+    padding: 10px;
+  box-sizing: border-box;
   }
 
   .template, .area {
