--- a/web/static/styles/pages/recognition-from-file/style.css
+++ b/web/static/styles/pages/recognition-from-file/style.css
@@ -7,9 +7,16 @@
 }
 
 .file-group{
+  display: flex;
   justify-items: end;
   align-items: center;
+  max-height: 25px;
+}
+
+.url-group{
   max-height: 20px;
+  display: flex;
+  justify-content: start;
 }
 
 .language-group{
@@ -35,14 +42,33 @@
 /*Отдельные элементы в блоках*/
 
 .file-group input{
-  height: 100%;
-  width: 100%;
+  flex: 1;
   background: transparent;
+  height: 100%;
+  border-radius: 5px 0 0 5px;
+  border: none;
+  background-color: rgba(255, 255, 255, 0.458);
+}
+
+.file-group input[type="file"]{
+  text-align: left;
+}
+
+.file-group input[type="url"]{
+  text-align: left;
+}
+
+.file-group select{
+  flex: 1;
+  background-color: #9f9f9f;
+  max-width: 100px;
+  height: 100%;
+  border-radius: 0 5px 5px 0;
+  border: none;
 }
 
 .language-group *{
   flex: 1;
-  background: transparent;
 }
 
 .language-group button{
@@ -58,6 +84,7 @@
 .normalize-group img{
   max-height: 50%;
   margin-right: 1%;
+  cursor: help;
 }
 
 .normalize-group label{
@@ -74,4 +101,8 @@
   margin-right: 1%;
   padding: 10px;
   box-sizing: border-box;
+}
+
+.none-display{
+  display: none;
 }
