--- a/web/templates/auth-page.html
+++ b/web/templates/auth-page.html
@@ -2,13 +2,13 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/web/static/pages/auth/css/style.css">
-        <title>Реальное время / Авторизация</title>
+        <link rel="stylesheet" href="/web/styles/auth-page-style.css">
+        <title>Реальное время / {{.title}}</title>
         <link rel="icon" href="/web/static/img/favicon.ico" type="image/x-icon">
     </head>
     <body>
     <div class="login-box">
-        <h2>Авторизация</h2>
+        <h2>{{.title}}</h2>
         <form action="/login" method="post">
             <div class="user-box">
             <input type="text" id="login" name="login" required>
