--- a/web/templates/text-processing-page.html
+++ b/web/templates/text-processing-page.html
@@ -11,14 +11,9 @@
             <div class="template">
             <p>Выбрать готовый шаблон:</p>
             <select id="promtSelect">
-                <option value="0">Выбрать шаблон</option>
-                <option value="digest">Дайджест</option>
-                <option value="rewrite">Рерайт</option>
-                <option value="title">Заголовок</option>
-                <option value="short">Сокращение</option>
-                <option value="summary">Суммаризация</option>
-                <option value="analysis">Анализ</option>
-                <option value="normalize">Знаки препинания</option>
+                {{range .templates}}
+                    <option value="{{.Value}}">{{.Name}}</option>
+                {{end}}
             </select>
             </div>
         </div>
