--- a/web/templates/image-generation-page.html
+++ b/web/templates/image-generation-page.html
@@ -1,4 +1,4 @@
-{{template "header.html"}}
+{{template "header.html" .}}
 <div class="work-group">
     <div class="input-group">
         <div class="promt-area">
@@ -39,4 +39,4 @@
         </div>
     </div>
 </div>
-{{template "footer.html"}}
+{{template "footer.html" .}}
