--- a/web/templates/image-upscale-page.html
+++ b/web/templates/image-upscale-page.html
@@ -1,4 +1,4 @@
-{{template "header.html"}}
+{{template "header.html" .}}
 <div class="work-group">
     <div class="input-group">
         <input type="file" class="input-field" name="filePath" id="fileInput" accept=".jpeg, .jpg, .png">
@@ -10,4 +10,4 @@
         <img id="image" src="/web/static/img/templates/3-2.png">
     </div>
 </div>
-{{template "footer.html"}}
+{{template "footer.html" .}}
