--- a/web/templates/text-rewriting-page.html
+++ b/web/templates/text-rewriting-page.html
@@ -1,4 +1,4 @@
-{{template "header.html"}}
+{{template "header.html" .}}
 <div class="work-group">
     <div class="input-text-group">
         <textarea class="output-area" id="inputArea" placeholder="Введите сюда текст"></textarea>
@@ -17,4 +17,4 @@
         <button class="button b2" id="copyText" disabled>Скопировать</button>
         <button class="button b3" id="resetButton" disabled>Восстановить</button>
     </div>
-{{template "footer.html"}}
+{{template "footer.html" .}}
