--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -21,7 +21,7 @@
       <form action="/upscale"><button class="header-button upper-bold" id="upscalePage">Увеличение изображения</button></form>
       <form action="/rewrite"><button class="header-button upper-bold" id="rewritePage">Рерайт текста</button></form>
       <form action="/text"><button class="header-button upper-bold" id="textPage">Обработка текста</button></form>
-      <form action="https://www.photopea.com/" target="_blank"><button class="header-button upper-bold" id="textPage">↪ Онлайн Photoshop</button></form>
+      <form action="/photopea" method="post" target="_blank"><button class="header-button upper-bold" id="textPage">↪ Онлайн Photoshop</button></form>
     </div>
     <div class="header-group">
       <img src="/web/static/img/logo.png" class="logo-image"/>
