--- a/web/styles/image-generation-style.css
+++ b/web/styles/image-generation-style.css
@@ -9,13 +9,13 @@
   .input-group{
     display: grid;
     grid-template-rows: 3fr 1fr;
-    row-gap: 0.1%;
+    row-gap: 1%;
     background: transparent;
   }
 
   .output-image-group{
     display: grid;
-    grid-template-rows: 3fr 0.1fr;
+    grid-template-rows: 4fr 0.1fr;
     row-gap: 1%;
     background: transparent;
   }
@@ -25,14 +25,13 @@
 
 .promt-area{
     display: flex;
-    min-height: 55vh;
-    max-height: 59vh;
+    height: 100%;
 }
 
 .settings-area{
     background: transparent;
     display: grid;
-    row-gap: 3%;
+    row-gap: 5%;
     grid-template-rows: 0.1fr 1fr 0.4fr;
 }
 
@@ -76,7 +75,7 @@
 .seed-area input{
     margin-right: 15px;
     margin-left: -10px;
-    width: 40%;
+    width: 60%;
     height: calc(1.25rem + 2px);
     padding: 0.375rem 0.9rem;
     font-family: inherit;
@@ -120,9 +119,6 @@
     border: solid 1px black;
     max-width: 90%;
     max-height: 65vh;
-    width: auto;
-    height: auto;
-    box-shadow: 10px 5px 5px #fe72775b;
     margin: 10px;
 }
 
