--- a/web/styles/image-upscale-style.css
+++ b/web/styles/image-upscale-style.css
@@ -45,7 +45,12 @@
   .input-group .input-field{
     align-self: center;
     border-radius: 5px;
+    height: 30px;
     width: 100%;
+    cursor: pointer;
+    text-align: center; /* центрируем текст */
+    font-size: 15px; /* размер шрифта */
+    color: #333; /* цвет текста */
   }
 
   .output-group{
