--- a/web/templates/image-generation-result.html
+++ b/web/templates/image-generation-result.html
@@ -1,5 +1,7 @@
 {{template "header.html" .}}
 <div class="work-group">
-
+    <div class="output-group">
+        <img id="image" src="/web/static/img/templates/16-9.png">
+    </div>
 </div>
-{{template "footer.html" .}}}
+{{template "footer.html" .}}
