--- a/web/templates/image-generation-result.html
+++ b/web/templates/image-generation-result.html
@@ -9,7 +9,9 @@
             </div>
         </div>
         <div class="output-image-group">
-            <img class="output-image" id="outputImage" src="{{.image}}">
+            <div class="output-image-class">
+                <img class="output-image" id="outputImage" src="{{.image}}">
+            </div>
         </div>
     </div>
 {{template "footer.html" .}}
