--- a/web/templates/image-generation-page.html
+++ b/web/templates/image-generation-page.html
@@ -35,7 +35,7 @@
         </div>
         <div class="seed-class">
         <p>Seed (зерно):</p>
-        <p id="seedValue"></p>
+        <p class="seed-text upper-bold" id="seedValue"></p>
         </div>
     </div>
 </div>
