--- a/web/templates/recognition-result.html
+++ b/web/templates/recognition-result.html
@@ -1,5 +1,12 @@
 {{template "header.html" .}}
 <div class="work-group">
-    
+    <div class="input-text-group">
+        <p>Нормализованный текст</p>
+        <textarea class="output-area" id="inputArea"></textarea>
+    </div>
+    <div class="output-text-group">
+        <p >Сырой текст</p>
+        <textarea class="output-area" id="outputArea"></textarea>
+    </div>
 </div>
 {{template "footer.html" .}}
