--- a/web/styles/results/recognition-style.css
+++ b/web/styles/results/recognition-style.css
@@ -7,7 +7,7 @@
   }
   
   .input-text-group{
-    grid-template-rows: 1fr 12fr;
+    grid-template-rows: 0.5fr 12fr;
     display: grid;
   }
   
@@ -19,11 +19,13 @@
   .input-text-group p{
     text-align: left;
     font-size: 20px;
+    margin: 10px 0 10px 5px;
   }
 
   .output-text-group p{
     text-align: left;
     font-size: 20px;
+    margin: 10px 0 10px 5px;
   }
 
   .input-text-group textarea{
