--- a/web/templates/progress-operation.html
+++ b/web/templates/progress-operation.html
@@ -1,3 +1,13 @@
 {{template "header.html" .}}
-
+<div class="work-group">
+    <div class="name-type">
+        <p>ЗАПРОС ВЫПОЛНЯЕТСЯ</p>
+    </div>
+    <div class="user_id">
+        <p >ID вашей операции</p> {{.ID}}
+    </div>
+    <div class="text">
+        <p>Пожалуйст подождите.</p>
+    </div>
+</div>
 {{template "footer.html" .}}
