--- a/web/templates/no-operation.html
+++ b/web/templates/no-operation.html
@@ -1,13 +1,14 @@
 {{template "header.html" .}}
 <div class="work-group">
     <div class="name-type">
-        <p>ЗАПРОС ВЫПОЛНЯЕТСЯ</p>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/4b9ba14b0f.js" crossorigin="anonymous"></script>
     </div>
-    <div class="user_id">
-        <p >ID вашей операции</p> {{.id}}
-    </div>
-    <div class="text">
-        <p>Пожалуйст подождите.</p>
-    </div>
+    <div class="mainbox">
+        <div class="err">4</div>
+        <i class="far fa-question-circle fa-spin"></i>
+        <div class="err2">4</div>
+        <div class="msg">Запрос с таким ID не найден или вообще не существует. Проверьте правильно ли вы скопировали ссылку.<p>Давайте перейдем <a href="/">на главную</a> и попробуем оттуда.</p></div>
+      </div>
 </div>
 {{template "footer.html" .}}
